--- a/src/config.json
+++ b/src/config.json
@@ -1,23 +1,38 @@
 {
-    "name":"My Project",
-    "description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, urna eu aliquet ultricies, urna elit aliquam nunc, quis aliquet nunc nisl quis nisl.",
-    "website":"",
-    "twitter":"",
-    "discord":"",
-    "rpc":"",
-    "network":"atlantic-2", 
-    "collection_address":"", 
-    "nft_name_type": "default",
-    "groups":[
+    "mnemonic": "describe wealth alert garlic accuse place argue label nose spring enforce stereo",
+    "rpc": "https://rpc.atlantic-2.seinetwork.io/",
+    "network": "atlantic-2",
+    "name": "Sei Teens",
+    "symbol": "ST",
+    "description": "Teens here to takeover",
+    "supply": 666,
+    "token_uri": "https://arweave.net/8FXDLIq39Oo7SB7KPxlqlWmzFkcVsAtOQgaBbAx5Ix4",
+    "royalty_percent": 9,
+    "royalty_wallet": "sei1antkhk3hmqa74u2kmnsx4fgeg0mql6xx7k2kg7",
+    "iterated_uri": false,
+    "start_order": 1,
+    "frozen": false,
+    "hidden_metadata": false,
+    "placeholder_token_uri": null,
+    "groups": [
         {
-            "name":"whitelist",
-            "allowlist":[
-                "sei14v72v7hgzuvgck6v6jsgjacxnt34gj06qnx53d",
-                "sei1t22vwusjlxg4vp7gttsx7n2y9u4k0vv9lpk2ge"
-            ] 
-        },
-        {
-            "name":"public"
+            "name": "public",
+            "merkle_root": null,
+            "max_tokens": 0,
+            "unit_price": 0,
+            "creators": [
+                {
+                    "address": "sei1antkhk3hmqa74u2kmnsx4fgeg0mql6xx7k2kg7",
+                    "share": 92
+                }, 
+                {
+                    "address": "sei1ll7hc2lw7z3uvwav6ptdz82ewca8t98s8g6kmc",
+                    "share": 8
+                }
+                
+            ],
+            "start_time": "2024-02-19T05:10:21Z",
+            "end_time": null
         }
     ]
 }
